# react-native-fs

./: FS.common.js  README.md  index.d.ts  package.json
doc/: en.md  zh-cn.md
harmony/: fs.har
harmony/fs/: BuildProfile.ets  build-profile.json5  hvigorfile.ts  index.ets  oh-package.json5  ts.ts
harmony/fs/src/main/: module.json5
harmony/fs/src/main/cpp/: CMakeLists.txt  FsPackage.h  FsTurboModule.cpp  FsTurboModule.h
harmony/fs/src/main/ets/: FsPackage.ts  FsTurboModule.ts
harmony/fs/src/main/ets/namespace/: index.ets  ts.ts
harmony/fs/src/main/ets/namespace/turboModules/: ReactNativeFs.ts  ts.ts
harmony/fs/src/main/resources/en_US/element/: string.json
harmony/fs/src/main/resources/zh_CN/element/: string.json
harmony/fs/src/ohosTest/: module.json5
src/: NativeReactNativeFs..js  NativeReactNativeFs..ts
